all: workspace refactor. Now files are separated between model and resource files